added download button

--- a/src/locales/cs.json
+++ b/src/locales/cs.json
@@ -43,6 +43,9 @@
     "processTemplate": "Zpracovat šablonu",
     "size": "Velikost",
     "uploaded": "Nahráno",
+    "downloadTemplate": "Stáhnout šablonu",
+    "downloadSuccess": "Šablona \"{{filename}}\" byla úspěšně stažena",
+    "downloadFailed": "Nepodařilo se stáhnout soubor. Prosím zkuste znovu.",
     "deleteTemplate": "Smazat šablonu",
     "deleteConfirmTitle": "Smazat šablonu",
     "deleteConfirmMessage": "Opravdu chcete smazat \"{{filename}}\"? Tuto akci nelze vrátit zpět.",
