--- a/src/locales/de.json
+++ b/src/locales/de.json
@@ -43,6 +43,9 @@
     "processTemplate": "Vorlage verarbeiten",
     "size": "Größe",
     "uploaded": "Hochgeladen",
+    "downloadTemplate": "Vorlage herunterladen",
+    "downloadSuccess": "Vorlage \"{{filename}}\" erfolgreich heruntergeladen",
+    "downloadFailed": "Fehler beim Herunterladen der Datei. Bitte versuchen Sie es erneut.",
     "deleteTemplate": "Vorlage löschen",
     "deleteConfirmTitle": "Vorlage löschen",
     "deleteConfirmMessage": "Möchten Sie \"{{filename}}\" wirklich löschen? Diese Aktion kann nicht rückgängig gemacht werden.",
