--- a/src/locales/en-US.json
+++ b/src/locales/en-US.json
@@ -50,6 +50,9 @@
     "processTemplate": "Process Template",
     "size": "Size",
     "uploaded": "Uploaded",
+    "downloadTemplate": "Download template",
+    "downloadSuccess": "Template \"{{filename}}\" downloaded successfully",
+    "downloadFailed": "Failed to download file. Please try again.",
     "deleteTemplate": "Delete template",
     "moveTemplate": "Move to folder",
     "deleteConfirmTitle": "Delete Template",
