--- a/src/locales/es.json
+++ b/src/locales/es.json
@@ -43,6 +43,9 @@
     "processTemplate": "Procesar plantilla",
     "size": "Tamaño",
     "uploaded": "Cargado",
+    "downloadTemplate": "Descargar plantilla",
+    "downloadSuccess": "Plantilla \"{{filename}}\" descargada exitosamente",
+    "downloadFailed": "Error al descargar el archivo. Por favor, inténtelo de nuevo.",
     "deleteTemplate": "Eliminar plantilla",
     "deleteConfirmTitle": "Eliminar plantilla",
     "deleteConfirmMessage": "¿Está seguro de que desea eliminar \"{{filename}}\"? Esta acción no se puede deshacer.",
