--- a/src/locales/fr.json
+++ b/src/locales/fr.json
@@ -43,6 +43,9 @@
     "processTemplate": "Traiter le modèle",
     "size": "Taille",
     "uploaded": "Téléchargé",
+    "downloadTemplate": "Télécharger le modèle",
+    "downloadSuccess": "Modèle \"{{filename}}\" téléchargé avec succès",
+    "downloadFailed": "Échec du téléchargement du fichier. Veuillez réessayer.",
     "deleteTemplate": "Supprimer le modèle",
     "deleteConfirmTitle": "Supprimer le modèle",
     "deleteConfirmMessage": "Êtes-vous sûr de vouloir supprimer \"{{filename}}\" ? Cette action ne peut pas être annulée.",
