--- a/src/locales/hu.json
+++ b/src/locales/hu.json
@@ -43,6 +43,9 @@
     "processTemplate": "Sablon feldolgozása",
     "size": "Méret",
     "uploaded": "Feltöltve",
+    "downloadTemplate": "Sablon letöltése",
+    "downloadSuccess": "A \"{{filename}}\" sablon sikeresen letöltve",
+    "downloadFailed": "A fájl letöltése sikertelen. Kérjük, próbálja újra.",
     "deleteTemplate": "Sablon törlése",
     "deleteConfirmTitle": "Sablon törlése",
     "deleteConfirmMessage": "Biztosan törölni szeretné a \"{{filename}}\" fájlt? Ez a művelet nem vonható vissza.",
