--- a/src/locales/it.json
+++ b/src/locales/it.json
@@ -43,6 +43,9 @@
     "processTemplate": "Elabora modello",
     "size": "Dimensione",
     "uploaded": "Caricato",
+    "downloadTemplate": "Scarica modello",
+    "downloadSuccess": "Modello \"{{filename}}\" scaricato con successo",
+    "downloadFailed": "Impossibile scaricare il file. Si prega di riprovare.",
     "deleteTemplate": "Elimina modello",
     "deleteConfirmTitle": "Elimina modello",
     "deleteConfirmMessage": "Sei sicuro di voler eliminare \"{{filename}}\"? Questa azione non può essere annullata.",
