--- a/src/locales/ja.json
+++ b/src/locales/ja.json
@@ -43,6 +43,9 @@
     "processTemplate": "テンプレートを処理",
     "size": "サイズ",
     "uploaded": "アップロード済み",
+    "downloadTemplate": "テンプレートをダウンロード",
+    "downloadSuccess": "テンプレート「{{filename}}」が正常にダウンロードされました",
+    "downloadFailed": "ファイルのダウンロードに失敗しました。もう一度お試しください。",
     "deleteTemplate": "テンプレートを削除",
     "deleteConfirmTitle": "テンプレートを削除",
     "deleteConfirmMessage": "「{{filename}}」を削除してもよろしいですか？この操作は元に戻せません。",
