--- a/src/locales/pl.json
+++ b/src/locales/pl.json
@@ -43,6 +43,9 @@
     "processTemplate": "Przetwórz szablon",
     "size": "Rozmiar",
     "uploaded": "Przesłano",
+    "downloadTemplate": "Pobierz szablon",
+    "downloadSuccess": "Szablon \"{{filename}}\" został pomyślnie pobrany",
+    "downloadFailed": "Nie udało się pobrać pliku. Spróbuj ponownie.",
     "deleteTemplate": "Usuń szablon",
     "deleteConfirmTitle": "Usuń szablon",
     "deleteConfirmMessage": "Czy na pewno chcesz usunąć \"{{filename}}\"? Tej akcji nie można cofnąć.",
