--- a/src/locales/sk.json
+++ b/src/locales/sk.json
@@ -50,6 +50,9 @@
     "processTemplate": "Spracovať šablónu",
     "size": "Veľkosť",
     "uploaded": "Nahrané",
+    "downloadTemplate": "Stiahnuť šablónu",
+    "downloadSuccess": "Šablóna \"{{filename}}\" bola úspešne stiahnutá",
+    "downloadFailed": "Nepodarilo sa stiahnuť súbor. Prosím skúste znova.",
     "deleteTemplate": "Zmazať šablónu",
     "moveTemplate": "Presunúť do priečinka",
     "deleteConfirmTitle": "Zmazať šablónu",
