--- a/src/locales/zh.json
+++ b/src/locales/zh.json
@@ -43,6 +43,9 @@
     "processTemplate": "处理模板",
     "size": "大小",
     "uploaded": "已上传",
+    "downloadTemplate": "下载模板",
+    "downloadSuccess": "模板 \"{{filename}}\" 已成功下载",
+    "downloadFailed": "下载文件失败。请重试。",
     "deleteTemplate": "删除模板",
     "deleteConfirmTitle": "删除模板",
     "deleteConfirmMessage": "确定要删除 \"{{filename}}\" 吗？此操作无法撤消。",
