added save and save as buttons

--- a/src/locales/cs.json
+++ b/src/locales/cs.json
@@ -75,6 +75,24 @@
     "customizationDesc": "Nalezena <strong>{{count}}</strong> proměnná{{plural}} ve vaší šabloně. Vyplňte hodnoty níže pro přizpůsobení dokumentu.",
     "enterValue": "Zadejte hodnotu pro {{placeholder}}...",
     "chars": "znaků",
+    "save": "Uložit",
+    "saveAs": "Uložit jako",
+    "saving": "Ukládám...",
+    "saveSuccess": "Šablona byla úspěšně uložena!",
+    "saveFailed": "Nepodařilo se uložit šablonu. Zkuste to prosím znovu.",
+    "saveAsTitle": "Uložit jako novou šablonu",
+    "saveAsFilename": "Název souboru",
+    "saveAsSelectFolder": "Vybrat složku",
+    "saveAsFilenamePlaceholder": "Zadejte název souboru...",
+    "saveAsInvalidFilename": "Zadejte prosím platný název souboru",
+    "saveAsFileExists": "Soubor s tímto názvem již ve vybrané složce existuje",
+    "saveAsSuccess": "Šablona byla úspěšně uložena jako \"{{filename}}\"!",
+    "saveAsFailed": "Nepodařilo se uložit šablonu. Zkuste to prosím znovu.",
+    "unsavedChangesTitle": "Neuložené změny",
+    "unsavedChangesMessage": "Máte neuložené změny. Co chcete udělat?",
+    "unsavedChangesSave": "Uložit změny",
+    "unsavedChangesSaveAs": "Uložit jako...",
+    "unsavedChangesDiscard": "Zahodit změny",
     "generateDocument": "Vygenerovat dokument",
     "processing": "Zpracovávám...",
     "cancel": "Zrušit",
