--- a/src/locales/de.json
+++ b/src/locales/de.json
@@ -75,6 +75,24 @@
     "customizationDesc": "<strong>{{count}}</strong> Platzhalter{{plural}} in Ihrer Vorlage gefunden. Füllen Sie die Werte unten aus, um Ihr Dokument anzupassen.",
     "enterValue": "Geben Sie einen Wert für {{placeholder}} ein...",
     "chars": "Zeichen",
+    "save": "Speichern",
+    "saveAs": "Speichern unter",
+    "saving": "Speichern...",
+    "saveSuccess": "Vorlage erfolgreich gespeichert!",
+    "saveFailed": "Fehler beim Speichern der Vorlage. Bitte versuchen Sie es erneut.",
+    "saveAsTitle": "Als neue Vorlage speichern",
+    "saveAsFilename": "Dateiname",
+    "saveAsSelectFolder": "Ordner auswählen",
+    "saveAsFilenamePlaceholder": "Dateinamen eingeben...",
+    "saveAsInvalidFilename": "Bitte geben Sie einen gültigen Dateinamen ein",
+    "saveAsFileExists": "Eine Datei mit diesem Namen existiert bereits im ausgewählten Ordner",
+    "saveAsSuccess": "Vorlage wurde erfolgreich als \"{{filename}}\" gespeichert!",
+    "saveAsFailed": "Fehler beim Speichern der Vorlage. Bitte versuchen Sie es erneut.",
+    "unsavedChangesTitle": "Nicht gespeicherte Änderungen",
+    "unsavedChangesMessage": "Sie haben nicht gespeicherte Änderungen. Was möchten Sie tun?",
+    "unsavedChangesSave": "Änderungen speichern",
+    "unsavedChangesSaveAs": "Speichern unter...",
+    "unsavedChangesDiscard": "Änderungen verwerfen",
     "generateDocument": "Dokument generieren",
     "processing": "Wird verarbeitet...",
     "cancel": "Abbrechen",
