--- a/src/locales/en-US.json
+++ b/src/locales/en-US.json
@@ -84,6 +84,24 @@
     "customizationDesc": "Found <strong>{{count}}</strong> placeholder{{plural}} in your template. Fill in the values below to personalize your document.",
     "enterValue": "Enter value for {{placeholder}}...",
     "chars": "chars",
+    "save": "Save",
+    "saveAs": "Save As",
+    "saving": "Saving...",
+    "saveSuccess": "Template saved successfully!",
+    "saveFailed": "Failed to save template. Please try again.",
+    "saveAsTitle": "Save As New Template",
+    "saveAsFilename": "Filename",
+    "saveAsSelectFolder": "Select Folder",
+    "saveAsFilenamePlaceholder": "Enter filename...",
+    "saveAsInvalidFilename": "Please enter a valid filename",
+    "saveAsFileExists": "A file with this name already exists in the selected folder",
+    "saveAsSuccess": "Template saved as \"{{filename}}\" successfully!",
+    "saveAsFailed": "Failed to save template. Please try again.",
+    "unsavedChangesTitle": "Unsaved Changes",
+    "unsavedChangesMessage": "You have unsaved changes. What would you like to do?",
+    "unsavedChangesSave": "Save Changes",
+    "unsavedChangesSaveAs": "Save As...",
+    "unsavedChangesDiscard": "Discard Changes",
     "generateDocument": "Generate Document",
     "processing": "Processing...",
     "cancel": "Cancel",
