--- a/src/locales/es.json
+++ b/src/locales/es.json
@@ -75,6 +75,24 @@
     "customizationDesc": "Se encontraron <strong>{{count}}</strong> marcador{{plural}} en su plantilla. Complete los valores a continuación para personalizar su documento.",
     "enterValue": "Ingrese el valor para {{placeholder}}...",
     "chars": "caracteres",
+    "save": "Guardar",
+    "saveAs": "Guardar como",
+    "saving": "Guardando...",
+    "saveSuccess": "¡Plantilla guardada exitosamente!",
+    "saveFailed": "Error al guardar la plantilla. Por favor, intente nuevamente.",
+    "saveAsTitle": "Guardar como nueva plantilla",
+    "saveAsFilename": "Nombre de archivo",
+    "saveAsSelectFolder": "Seleccionar carpeta",
+    "saveAsFilenamePlaceholder": "Ingrese el nombre del archivo...",
+    "saveAsInvalidFilename": "Por favor ingrese un nombre de archivo válido",
+    "saveAsFileExists": "Ya existe un archivo con este nombre en la carpeta seleccionada",
+    "saveAsSuccess": "¡Plantilla guardada como \"{{filename}}\" exitosamente!",
+    "saveAsFailed": "Error al guardar la plantilla. Por favor, intente nuevamente.",
+    "unsavedChangesTitle": "Cambios sin guardar",
+    "unsavedChangesMessage": "Tiene cambios sin guardar. ¿Qué desea hacer?",
+    "unsavedChangesSave": "Guardar cambios",
+    "unsavedChangesSaveAs": "Guardar como...",
+    "unsavedChangesDiscard": "Descartar cambios",
     "generateDocument": "Generar documento",
     "processing": "Procesando...",
     "cancel": "Cancelar",
