--- a/src/locales/fr.json
+++ b/src/locales/fr.json
@@ -75,6 +75,24 @@
     "customizationDesc": "<strong>{{count}}</strong> espace{{plural}} réservé trouvé dans votre modèle. Remplissez les valeurs ci-dessous pour personnaliser votre document.",
     "enterValue": "Entrez la valeur pour {{placeholder}}...",
     "chars": "caractères",
+    "save": "Enregistrer",
+    "saveAs": "Enregistrer sous",
+    "saving": "Enregistrement...",
+    "saveSuccess": "Modèle enregistré avec succès !",
+    "saveFailed": "Échec de l'enregistrement du modèle. Veuillez réessayer.",
+    "saveAsTitle": "Enregistrer comme nouveau modèle",
+    "saveAsFilename": "Nom du fichier",
+    "saveAsSelectFolder": "Sélectionner un dossier",
+    "saveAsFilenamePlaceholder": "Entrez le nom du fichier...",
+    "saveAsInvalidFilename": "Veuillez entrer un nom de fichier valide",
+    "saveAsFileExists": "Un fichier avec ce nom existe déjà dans le dossier sélectionné",
+    "saveAsSuccess": "Modèle enregistré avec succès sous \"{{filename}}\" !",
+    "saveAsFailed": "Échec de l'enregistrement du modèle. Veuillez réessayer.",
+    "unsavedChangesTitle": "Modifications non enregistrées",
+    "unsavedChangesMessage": "Vous avez des modifications non enregistrées. Que souhaitez-vous faire ?",
+    "unsavedChangesSave": "Enregistrer les modifications",
+    "unsavedChangesSaveAs": "Enregistrer sous...",
+    "unsavedChangesDiscard": "Ignorer les modifications",
     "generateDocument": "Générer le document",
     "processing": "Traitement...",
     "cancel": "Annuler",
