--- a/src/locales/hu.json
+++ b/src/locales/hu.json
@@ -75,6 +75,24 @@
     "customizationDesc": "<strong>{{count}}</strong> helyőrző{{plural}} található a sablonban. Töltse ki az alábbi értékeket a dokumentum személyre szabásához.",
     "enterValue": "Adja meg a {{placeholder}} értékét...",
     "chars": "karakter",
+    "save": "Mentés",
+    "saveAs": "Mentés másként",
+    "saving": "Mentés...",
+    "saveSuccess": "A sablon sikeresen mentve!",
+    "saveFailed": "A sablon mentése sikertelen. Kérjük, próbálja újra.",
+    "saveAsTitle": "Mentés új sablonként",
+    "saveAsFilename": "Fájlnév",
+    "saveAsSelectFolder": "Mappa kiválasztása",
+    "saveAsFilenamePlaceholder": "Adja meg a fájlnevet...",
+    "saveAsInvalidFilename": "Kérjük, adjon meg egy érvényes fájlnevet",
+    "saveAsFileExists": "Már létezik ilyen névű fájl a kiválasztott mappában",
+    "saveAsSuccess": "A sablon sikeresen mentve \"{{filename}}\" néven!",
+    "saveAsFailed": "A sablon mentése sikertelen. Kérjük, próbálja újra.",
+    "unsavedChangesTitle": "Mentetlen módosítások",
+    "unsavedChangesMessage": "Mentetlen módosítások vannak. Mit szeretne tenni?",
+    "unsavedChangesSave": "Módosítások mentése",
+    "unsavedChangesSaveAs": "Mentés másként...",
+    "unsavedChangesDiscard": "Módosítások elvetése",
     "generateDocument": "Dokumentum generálása",
     "processing": "Feldolgozás...",
     "cancel": "Mégse",
