--- a/src/locales/it.json
+++ b/src/locales/it.json
@@ -75,6 +75,24 @@
     "customizationDesc": "Trovati <strong>{{count}}</strong> segnaposto{{plural}} nel tuo modello. Compila i valori qui sotto per personalizzare il tuo documento.",
     "enterValue": "Inserisci il valore per {{placeholder}}...",
     "chars": "caratteri",
+    "save": "Salva",
+    "saveAs": "Salva come",
+    "saving": "Salvataggio...",
+    "saveSuccess": "Modello salvato con successo!",
+    "saveFailed": "Salvataggio del modello non riuscito. Riprova.",
+    "saveAsTitle": "Salva come nuovo modello",
+    "saveAsFilename": "Nome file",
+    "saveAsSelectFolder": "Seleziona cartella",
+    "saveAsFilenamePlaceholder": "Inserisci il nome del file...",
+    "saveAsInvalidFilename": "Inserisci un nome file valido",
+    "saveAsFileExists": "Un file con questo nome esiste già nella cartella selezionata",
+    "saveAsSuccess": "Modello salvato con successo come \"{{filename}}\"!",
+    "saveAsFailed": "Salvataggio del modello non riuscito. Riprova.",
+    "unsavedChangesTitle": "Modifiche non salvate",
+    "unsavedChangesMessage": "Hai modifiche non salvate. Cosa vuoi fare?",
+    "unsavedChangesSave": "Salva modifiche",
+    "unsavedChangesSaveAs": "Salva come...",
+    "unsavedChangesDiscard": "Scarta modifiche",
     "generateDocument": "Genera documento",
     "processing": "Elaborazione...",
     "cancel": "Annulla",
