--- a/src/locales/ja.json
+++ b/src/locales/ja.json
@@ -75,6 +75,24 @@
     "customizationDesc": "テンプレートに <strong>{{count}}</strong> 個のプレースホルダー{{plural}}が見つかりました。以下の値を入力して文書をカスタマイズしてください。",
     "enterValue": "{{placeholder}}の値を入力してください...",
     "chars": "文字",
+    "save": "保存",
+    "saveAs": "名前を付けて保存",
+    "saving": "保存中...",
+    "saveSuccess": "テンプレートが正常に保存されました！",
+    "saveFailed": "テンプレートの保存に失敗しました。もう一度お試しください。",
+    "saveAsTitle": "新しいテンプレートとして保存",
+    "saveAsFilename": "ファイル名",
+    "saveAsSelectFolder": "フォルダを選択",
+    "saveAsFilenamePlaceholder": "ファイル名を入力してください...",
+    "saveAsInvalidFilename": "有効なファイル名を入力してください",
+    "saveAsFileExists": "選択したフォルダに同じ名前のファイルが既に存在します",
+    "saveAsSuccess": "テンプレートが「{{filename}}」として正常に保存されました！",
+    "saveAsFailed": "テンプレートの保存に失敗しました。もう一度お試しください。",
+    "unsavedChangesTitle": "未保存の変更",
+    "unsavedChangesMessage": "未保存の変更があります。どうしますか？",
+    "unsavedChangesSave": "変更を保存",
+    "unsavedChangesSaveAs": "名前を付けて保存...",
+    "unsavedChangesDiscard": "変更を破棄",
     "generateDocument": "文書を生成",
     "processing": "処理中...",
     "cancel": "キャンセル",
