--- a/src/locales/pl.json
+++ b/src/locales/pl.json
@@ -75,6 +75,24 @@
     "customizationDesc": "Znaleziono <strong>{{count}}</strong> zmienna{{plural}} w Twoim szablonie. Wypełnij wartości poniżej, aby spersonalizować dokument.",
     "enterValue": "Wprowadź wartość dla {{placeholder}}...",
     "chars": "znaków",
+    "save": "Zapisz",
+    "saveAs": "Zapisz jako",
+    "saving": "Zapisywanie...",
+    "saveSuccess": "Szablon został pomyślnie zapisany!",
+    "saveFailed": "Nie udało się zapisać szablonu. Spróbuj ponownie.",
+    "saveAsTitle": "Zapisz jako nowy szablon",
+    "saveAsFilename": "Nazwa pliku",
+    "saveAsSelectFolder": "Wybierz folder",
+    "saveAsFilenamePlaceholder": "Wprowadź nazwę pliku...",
+    "saveAsInvalidFilename": "Proszę podać prawidłową nazwę pliku",
+    "saveAsFileExists": "Plik o tej nazwie już istnieje w wybranym folderze",
+    "saveAsSuccess": "Szablon został zapisany jako \"{{filename}}\"!",
+    "saveAsFailed": "Nie udało się zapisać szablonu. Spróbuj ponownie.",
+    "unsavedChangesTitle": "Niezapisane zmiany",
+    "unsavedChangesMessage": "Masz niezapisane zmiany. Co chcesz zrobić?",
+    "unsavedChangesSave": "Zapisz zmiany",
+    "unsavedChangesSaveAs": "Zapisz jako...",
+    "unsavedChangesDiscard": "Odrzuć zmiany",
     "generateDocument": "Wygeneruj dokument",
     "processing": "Przetwarzanie...",
     "cancel": "Anuluj",
