--- a/src/locales/sk.json
+++ b/src/locales/sk.json
@@ -86,7 +86,25 @@
     "customizationDesc_other": "Našlo sa <strong>{{count}}</strong> premenných vo vašej šablóne. Vyplňte hodnoty nižšie pre prispôsobenie dokumentu.",
     "enterValue": "Zadajte hodnotu pre {{placeholder}}...",
     "chars": "znakov",
-    "generateDocument": "Vygenerovať dokument",
+    "save": "Uložiť",
+    "saveAs": "Uložiť ako",
+    "saving": "Ukladám...",
+    "saveSuccess": "Šablóna bola úspešne uložená!",
+    "saveFailed": "Nepodarilo sa uložiť šablónu. Prosím skúste znova.",
+    "saveAsTitle": "Uložiť ako novú šablónu",
+    "saveAsFilename": "Názov súboru",
+    "saveAsSelectFolder": "Vybrať priečinok",
+    "saveAsFilenamePlaceholder": "Zadajte názov súboru...",
+    "saveAsInvalidFilename": "Prosím zadajte platný názov súboru",
+    "saveAsFileExists": "Súbor s týmto názvom už existuje vo vybranom priečinku",
+    "saveAsSuccess": "Šablóna bola úspešne uložená ako \"{{filename}}\"!",
+    "saveAsFailed": "Nepodarilo sa uložiť šablónu. Prosím skúste znova.",
+    "unsavedChangesTitle": "Neuložené zmeny",
+    "unsavedChangesMessage": "Máte neuložené zmeny. Čo chcete urobiť?",
+    "unsavedChangesSave": "Uložiť zmeny",
+    "unsavedChangesSaveAs": "Uložiť ako...",
+    "unsavedChangesDiscard": "Zahodiť zmeny",
+    "generateDocument": "Generovať",
     "processing": "Spracúvam...",
     "cancel": "Zrušiť",
     "processSuccess": "Dokument bol úspešne spracovaný a stiahnutý!",
