--- a/src/locales/zh.json
+++ b/src/locales/zh.json
@@ -75,6 +75,24 @@
     "customizationDesc": "在您的模板中找到 <strong>{{count}}</strong> 个占位符{{plural}}。填写以下值以个性化您的文档。",
     "enterValue": "输入 {{placeholder}} 的值...",
     "chars": "字符",
+    "save": "保存",
+    "saveAs": "另存为",
+    "saving": "保存中...",
+    "saveSuccess": "模板已成功保存！",
+    "saveFailed": "保存模板失败。请重试。",
+    "saveAsTitle": "另存为新模板",
+    "saveAsFilename": "文件名",
+    "saveAsSelectFolder": "选择文件夹",
+    "saveAsFilenamePlaceholder": "输入文件名...",
+    "saveAsInvalidFilename": "请输入有效的文件名",
+    "saveAsFileExists": "所选文件夹中已存在同名文件",
+    "saveAsSuccess": "模板已成功保存为 \"{{filename}}\"！",
+    "saveAsFailed": "保存模板失败。请重试。",
+    "unsavedChangesTitle": "未保存的更改",
+    "unsavedChangesMessage": "您有未保存的更改。您想做什么？",
+    "unsavedChangesSave": "保存更改",
+    "unsavedChangesSaveAs": "另存为...",
+    "unsavedChangesDiscard": "放弃更改",
     "generateDocument": "生成文档",
     "processing": "处理中...",
     "cancel": "取消",
