added folderTree funtions

--- a/src/locales/cs.json
+++ b/src/locales/cs.json
@@ -121,8 +121,13 @@
     "title": "Folders",
     "allTemplates": "All Templates",
     "newFolder": "New Folder",
+    "searchPlaceholder": "Hledat složky...",
     "noFolders": "No folders yet",
     "createFirst": "Create your first folder to organize templates",
+    "expand": "Rozbalit složku",
+    "collapse": "Sbalit složku",
+    "expandAll": "Rozbalit vše",
+    "collapseAll": "Sbalit vše",
     "createFolder": "Create Folder",
     "createSubfolder": "Create Subfolder",
     "renameFolder": "Rename Folder",
@@ -144,6 +149,8 @@
     "noSpecialChars": "No special characters allowed: /\\:*?\"<>|",
     "actions": "Folder actions",
     "uploadToFolder": "Nahrát do složky",
+    "sortAZ": "Řadit A-Z",
+    "sortZA": "Řadit Z-A",
     "creating": "Creating...",
     "renaming": "Renaming...",
     "loadFailed": "Failed to load folders",
