--- a/src/locales/en-US.json
+++ b/src/locales/en-US.json
@@ -130,10 +130,13 @@
     "title": "Folders",
     "allTemplates": "All Templates",
     "newFolder": "New Folder",
+    "searchPlaceholder": "Search folders...",
     "noFolders": "No folders yet",
     "createFirst": "Create your first folder to organize templates",
     "expand": "Expand folder",
     "collapse": "Collapse folder",
+    "expandAll": "Expand All",
+    "collapseAll": "Collapse All",
     "createFolder": "Create Folder",
     "createSubfolder": "Create Subfolder",
     "renameFolder": "Rename Folder",
@@ -155,6 +158,8 @@
     "noSpecialChars": "No special characters allowed: /\\:*?\"<>|",
     "actions": "Folder actions",
     "uploadToFolder": "Upload to Folder",
+    "sortAZ": "Sort A-Z",
+    "sortZA": "Sort Z-A",
     "creating": "Creating...",
     "renaming": "Renaming...",
     "loadFailed": "Failed to load folders",
