--- a/src/locales/es.json
+++ b/src/locales/es.json
@@ -121,8 +121,13 @@
     "title": "Folders",
     "allTemplates": "All Templates",
     "newFolder": "New Folder",
+    "searchPlaceholder": "Buscar carpetas...",
     "noFolders": "No folders yet",
     "createFirst": "Create your first folder to organize templates",
+    "expand": "Expandir carpeta",
+    "collapse": "Contraer carpeta",
+    "expandAll": "Expandir todo",
+    "collapseAll": "Contraer todo",
     "createFolder": "Create Folder",
     "createSubfolder": "Create Subfolder",
     "renameFolder": "Rename Folder",
@@ -144,6 +149,8 @@
     "noSpecialChars": "No special characters allowed: /\\:*?\"<>|",
     "actions": "Folder actions",
     "uploadToFolder": "Subir a la carpeta",
+    "sortAZ": "Ordenar A-Z",
+    "sortZA": "Ordenar Z-A",
     "creating": "Creating...",
     "renaming": "Renaming...",
     "loadFailed": "Failed to load folders",
