--- a/src/locales/hu.json
+++ b/src/locales/hu.json
@@ -121,8 +121,13 @@
     "title": "Folders",
     "allTemplates": "All Templates",
     "newFolder": "New Folder",
+    "searchPlaceholder": "Mappák keresése...",
     "noFolders": "No folders yet",
     "createFirst": "Create your first folder to organize templates",
+    "expand": "Mappa kibontása",
+    "collapse": "Mappa összecsukása",
+    "expandAll": "Összes kibontása",
+    "collapseAll": "Összes összecsukása",
     "createFolder": "Create Folder",
     "createSubfolder": "Create Subfolder",
     "renameFolder": "Rename Folder",
@@ -144,6 +149,8 @@
     "noSpecialChars": "No special characters allowed: /\\:*?\"<>|",
     "actions": "Folder actions",
     "uploadToFolder": "Feltöltés mappába",
+    "sortAZ": "Rendezés A-Z",
+    "sortZA": "Rendezés Z-A",
     "creating": "Creating...",
     "renaming": "Renaming...",
     "loadFailed": "Failed to load folders",
