--- a/src/locales/it.json
+++ b/src/locales/it.json
@@ -121,8 +121,13 @@
     "title": "Folders",
     "allTemplates": "All Templates",
     "newFolder": "New Folder",
+    "searchPlaceholder": "Cerca cartelle...",
     "noFolders": "No folders yet",
     "createFirst": "Create your first folder to organize templates",
+    "expand": "Espandi cartella",
+    "collapse": "Comprimi cartella",
+    "expandAll": "Espandi tutto",
+    "collapseAll": "Comprimi tutto",
     "createFolder": "Create Folder",
     "createSubfolder": "Create Subfolder",
     "renameFolder": "Rename Folder",
@@ -144,6 +149,8 @@
     "noSpecialChars": "No special characters allowed: /\\:*?\"<>|",
     "actions": "Folder actions",
     "uploadToFolder": "Carica nella cartella",
+    "sortAZ": "Ordina A-Z",
+    "sortZA": "Ordina Z-A",
     "creating": "Creating...",
     "renaming": "Renaming...",
     "loadFailed": "Failed to load folders",
