--- a/src/locales/pl.json
+++ b/src/locales/pl.json
@@ -121,8 +121,13 @@
     "title": "Folders",
     "allTemplates": "All Templates",
     "newFolder": "New Folder",
+    "searchPlaceholder": "Szukaj folderów...",
     "noFolders": "No folders yet",
     "createFirst": "Create your first folder to organize templates",
+    "expand": "Rozwiń folder",
+    "collapse": "Zwiń folder",
+    "expandAll": "Rozwiń wszystko",
+    "collapseAll": "Zwiń wszystko",
     "createFolder": "Create Folder",
     "createSubfolder": "Create Subfolder",
     "renameFolder": "Rename Folder",
@@ -144,6 +149,8 @@
     "noSpecialChars": "No special characters allowed: /\\:*?\"<>|",
     "actions": "Folder actions",
     "uploadToFolder": "Prześlij do folderu",
+    "sortAZ": "Sortuj A-Z",
+    "sortZA": "Sortuj Z-A",
     "creating": "Creating...",
     "renaming": "Renaming...",
     "loadFailed": "Failed to load folders",
