--- a/src/locales/sk.json
+++ b/src/locales/sk.json
@@ -132,10 +132,13 @@
     "title": "Priečinky",
     "allTemplates": "Všetky šablóny",
     "newFolder": "Nový priečinok",
+    "searchPlaceholder": "Hľadať priečinky...",
     "noFolders": "Zatiaľ žiadne priečinky",
     "createFirst": "Vytvorte svoj prvý priečinok na organizáciu šablón",
     "expand": "Rozbaliť priečinok",
     "collapse": "Zbaliť priečinok",
+    "expandAll": "Rozbaliť všetko",
+    "collapseAll": "Zbaliť všetko",
     "createFolder": "Vytvoriť priečinok",
     "createSubfolder": "Vytvoriť podpriečinok",
     "renameFolder": "Premenovať priečinok",
@@ -157,6 +160,8 @@
     "noSpecialChars": "Nepovolené špeciálne znaky: /\\:*?\"<>|",
     "actions": "Akcie priečinka",
     "uploadToFolder": "Nahrať do priečinka",
+    "sortAZ": "Zoradiť A-Z",
+    "sortZA": "Zoradiť Z-A",
     "creating": "Vytváram...",
     "renaming": "Premenovávam...",
     "loadFailed": "Nepodarilo sa načítať priečinky",
