--- a/src/locales/zh.json
+++ b/src/locales/zh.json
@@ -121,8 +121,13 @@
     "title": "Folders",
     "allTemplates": "All Templates",
     "newFolder": "New Folder",
+    "searchPlaceholder": "搜索文件夹...",
     "noFolders": "No folders yet",
     "createFirst": "Create your first folder to organize templates",
+    "expand": "展开文件夹",
+    "collapse": "折叠文件夹",
+    "expandAll": "全部展开",
+    "collapseAll": "全部折叠",
     "createFolder": "Create Folder",
     "createSubfolder": "Create Subfolder",
     "renameFolder": "Rename Folder",
@@ -144,6 +149,8 @@
     "noSpecialChars": "No special characters allowed: /\\:*?\"<>|",
     "actions": "Folder actions",
     "uploadToFolder": "上传到文件夹",
+    "sortAZ": "排序 A-Z",
+    "sortZA": "排序 Z-A",
     "creating": "Creating...",
     "renaming": "Renaming...",
     "loadFailed": "Failed to load folders",
