--- a/src/locales/de.json
+++ b/src/locales/de.json
@@ -121,8 +121,13 @@
     "title": "Folders",
     "allTemplates": "All Templates",
     "newFolder": "New Folder",
+    "searchPlaceholder": "Ordner suchen...",
     "noFolders": "No folders yet",
     "createFirst": "Create your first folder to organize templates",
+    "expand": "Ordner erweitern",
+    "collapse": "Ordner einklappen",
+    "expandAll": "Alle erweitern",
+    "collapseAll": "Alle einklappen",
     "createFolder": "Create Folder",
     "createSubfolder": "Create Subfolder",
     "renameFolder": "Rename Folder",
@@ -144,6 +149,8 @@
     "noSpecialChars": "No special characters allowed: /\\:*?\"<>|",
     "actions": "Folder actions",
     "uploadToFolder": "In Ordner hochladen",
+    "sortAZ": "Sortieren A-Z",
+    "sortZA": "Sortieren Z-A",
     "creating": "Creating...",
     "renaming": "Renaming...",
     "loadFailed": "Failed to load folders",
