--- a/src/locales/fr.json
+++ b/src/locales/fr.json
@@ -121,8 +121,13 @@
     "title": "Folders",
     "allTemplates": "All Templates",
     "newFolder": "New Folder",
+    "searchPlaceholder": "Rechercher des dossiers...",
     "noFolders": "No folders yet",
     "createFirst": "Create your first folder to organize templates",
+    "expand": "Développer le dossier",
+    "collapse": "Réduire le dossier",
+    "expandAll": "Tout développer",
+    "collapseAll": "Tout réduire",
     "createFolder": "Create Folder",
     "createSubfolder": "Create Subfolder",
     "renameFolder": "Rename Folder",
@@ -144,6 +149,8 @@
     "noSpecialChars": "No special characters allowed: /\\:*?\"<>|",
     "actions": "Folder actions",
     "uploadToFolder": "Télécharger dans le dossier",
+    "sortAZ": "Trier A-Z",
+    "sortZA": "Trier Z-A",
     "creating": "Creating...",
     "renaming": "Renaming...",
     "loadFailed": "Failed to load folders",
