added new folder create  for save as dialog

--- a/src/locales/cs.json
+++ b/src/locales/cs.json
@@ -129,12 +129,15 @@
     "expandAll": "Rozbalit vše",
     "collapseAll": "Sbalit vše",
     "createFolder": "Create Folder",
+    "createNewFolder": "Vytvořit novou složku",
+    "cancelNewFolder": "Zrušit vytváření",
     "createSubfolder": "Create Subfolder",
     "renameFolder": "Rename Folder",
     "deleteFolder": "Delete Folder",
     "folderName": "Folder name",
     "parentFolder": "Parent folder",
     "enterFolderName": "Enter folder name...",
+    "rootFolder": "Kořen (Všechny šablony)",
     "folderCreated": "Folder \"{{name}}\" created successfully",
     "folderRenamed": "Folder renamed to \"{{name}}\"",
     "folderDeleted": "Folder \"{{name}}\" deleted",
