--- a/src/locales/de.json
+++ b/src/locales/de.json
@@ -129,12 +129,15 @@
     "expandAll": "Alle erweitern",
     "collapseAll": "Alle einklappen",
     "createFolder": "Create Folder",
+    "createNewFolder": "Neuen Ordner erstellen",
+    "cancelNewFolder": "Erstellung abbrechen",
     "createSubfolder": "Create Subfolder",
     "renameFolder": "Rename Folder",
     "deleteFolder": "Delete Folder",
     "folderName": "Folder name",
     "parentFolder": "Parent folder",
     "enterFolderName": "Enter folder name...",
+    "rootFolder": "Wurzel (Alle Vorlagen)",
     "folderCreated": "Folder \"{{name}}\" created successfully",
     "folderRenamed": "Folder renamed to \"{{name}}\"",
     "folderDeleted": "Folder \"{{name}}\" deleted",
