--- a/src/locales/en-US.json
+++ b/src/locales/en-US.json
@@ -138,12 +138,15 @@
     "expandAll": "Expand All",
     "collapseAll": "Collapse All",
     "createFolder": "Create Folder",
+    "createNewFolder": "Create New Folder",
+    "cancelNewFolder": "Cancel Creation",
     "createSubfolder": "Create Subfolder",
     "renameFolder": "Rename Folder",
     "deleteFolder": "Delete Folder",
     "folderName": "Folder name",
     "parentFolder": "Parent folder",
     "enterFolderName": "Enter folder name...",
+    "rootFolder": "Root (All Templates)",
     "folderCreated": "Folder \"{{name}}\" created successfully",
     "folderRenamed": "Folder renamed to \"{{name}}\"",
     "folderDeleted": "Folder \"{{name}}\" deleted",
