--- a/src/locales/hu.json
+++ b/src/locales/hu.json
@@ -129,12 +129,15 @@
     "expandAll": "Összes kibontása",
     "collapseAll": "Összes összecsukása",
     "createFolder": "Create Folder",
+    "createNewFolder": "Új mappa létrehozása",
+    "cancelNewFolder": "Létrehozás megszakítása",
     "createSubfolder": "Create Subfolder",
     "renameFolder": "Rename Folder",
     "deleteFolder": "Delete Folder",
     "folderName": "Folder name",
     "parentFolder": "Parent folder",
     "enterFolderName": "Enter folder name...",
+    "rootFolder": "Gyökér (Összes sablon)",
     "folderCreated": "Folder \"{{name}}\" created successfully",
     "folderRenamed": "Folder renamed to \"{{name}}\"",
     "folderDeleted": "Folder \"{{name}}\" deleted",
