--- a/src/locales/it.json
+++ b/src/locales/it.json
@@ -129,12 +129,15 @@
     "expandAll": "Espandi tutto",
     "collapseAll": "Comprimi tutto",
     "createFolder": "Create Folder",
+    "createNewFolder": "Crea nuova cartella",
+    "cancelNewFolder": "Annulla creazione",
     "createSubfolder": "Create Subfolder",
     "renameFolder": "Rename Folder",
     "deleteFolder": "Delete Folder",
     "folderName": "Folder name",
     "parentFolder": "Parent folder",
     "enterFolderName": "Enter folder name...",
+    "rootFolder": "Radice (Tutti i modelli)",
     "folderCreated": "Folder \"{{name}}\" created successfully",
     "folderRenamed": "Folder renamed to \"{{name}}\"",
     "folderDeleted": "Folder \"{{name}}\" deleted",
