--- a/src/locales/ja.json
+++ b/src/locales/ja.json
@@ -129,12 +129,15 @@
     "expandAll": "すべて展開",
     "collapseAll": "すべて折りたたむ",
     "createFolder": "Create Folder",
+    "createNewFolder": "新しいフォルダを作成",
+    "cancelNewFolder": "作成をキャンセル",
     "createSubfolder": "Create Subfolder",
     "renameFolder": "Rename Folder",
     "deleteFolder": "Delete Folder",
     "folderName": "Folder name",
     "parentFolder": "Parent folder",
     "enterFolderName": "Enter folder name...",
+    "rootFolder": "ルート（すべてのテンプレート）",
     "folderCreated": "Folder \"{{name}}\" created successfully",
     "folderRenamed": "Folder renamed to \"{{name}}\"",
     "folderDeleted": "Folder \"{{name}}\" deleted",
