--- a/src/locales/pl.json
+++ b/src/locales/pl.json
@@ -129,12 +129,15 @@
     "expandAll": "Rozwiń wszystko",
     "collapseAll": "Zwiń wszystko",
     "createFolder": "Create Folder",
+    "createNewFolder": "Utwórz nowy folder",
+    "cancelNewFolder": "Anuluj tworzenie",
     "createSubfolder": "Create Subfolder",
     "renameFolder": "Rename Folder",
     "deleteFolder": "Delete Folder",
     "folderName": "Folder name",
     "parentFolder": "Parent folder",
     "enterFolderName": "Enter folder name...",
+    "rootFolder": "Katalog główny (Wszystkie szablony)",
     "folderCreated": "Folder \"{{name}}\" created successfully",
     "folderRenamed": "Folder renamed to \"{{name}}\"",
     "folderDeleted": "Folder \"{{name}}\" deleted",
