--- a/src/locales/sk.json
+++ b/src/locales/sk.json
@@ -140,12 +140,15 @@
     "expandAll": "Rozbaliť všetko",
     "collapseAll": "Zbaliť všetko",
     "createFolder": "Vytvoriť priečinok",
+    "createNewFolder": "Vytvoriť nový priečinok",
+    "cancelNewFolder": "Zrušiť vytváranie",
     "createSubfolder": "Vytvoriť podpriečinok",
     "renameFolder": "Premenovať priečinok",
     "deleteFolder": "Zmazať priečinok",
     "folderName": "Názov priečinka",
     "parentFolder": "Nadradený priečinok",
     "enterFolderName": "Zadajte názov priečinka...",
+    "rootFolder": "Koreň (Všetky šablóny)",
     "folderCreated": "Priečinok \"{{name}}\" bol úspešne vytvorený",
     "folderRenamed": "Priečinok premenovaný na \"{{name}}\"",
     "folderDeleted": "Priečinok \"{{name}}\" bol zmazaný",
