--- a/src/locales/zh.json
+++ b/src/locales/zh.json
@@ -129,12 +129,15 @@
     "expandAll": "全部展开",
     "collapseAll": "全部折叠",
     "createFolder": "Create Folder",
+    "createNewFolder": "创建新文件夹",
+    "cancelNewFolder": "取消创建",
     "createSubfolder": "Create Subfolder",
     "renameFolder": "Rename Folder",
     "deleteFolder": "Delete Folder",
     "folderName": "Folder name",
     "parentFolder": "Parent folder",
     "enterFolderName": "Enter folder name...",
+    "rootFolder": "根目录（所有模板）",
     "folderCreated": "Folder \"{{name}}\" created successfully",
     "folderRenamed": "Folder renamed to \"{{name}}\"",
     "folderDeleted": "Folder \"{{name}}\" deleted",
