--- a/src/locales/es.json
+++ b/src/locales/es.json
@@ -129,12 +129,15 @@
     "expandAll": "Expandir todo",
     "collapseAll": "Contraer todo",
     "createFolder": "Create Folder",
+    "createNewFolder": "Crear nueva carpeta",
+    "cancelNewFolder": "Cancelar creación",
     "createSubfolder": "Create Subfolder",
     "renameFolder": "Rename Folder",
     "deleteFolder": "Delete Folder",
     "folderName": "Folder name",
     "parentFolder": "Parent folder",
     "enterFolderName": "Enter folder name...",
+    "rootFolder": "Raíz (Todas las plantillas)",
     "folderCreated": "Folder \"{{name}}\" created successfully",
     "folderRenamed": "Folder renamed to \"{{name}}\"",
     "folderDeleted": "Folder \"{{name}}\" deleted",
