--- a/src/locales/fr.json
+++ b/src/locales/fr.json
@@ -129,12 +129,15 @@
     "expandAll": "Tout développer",
     "collapseAll": "Tout réduire",
     "createFolder": "Create Folder",
+    "createNewFolder": "Créer un nouveau dossier",
+    "cancelNewFolder": "Annuler la création",
     "createSubfolder": "Create Subfolder",
     "renameFolder": "Rename Folder",
     "deleteFolder": "Delete Folder",
     "folderName": "Folder name",
     "parentFolder": "Parent folder",
     "enterFolderName": "Enter folder name...",
+    "rootFolder": "Racine (Tous les modèles)",
     "folderCreated": "Folder \"{{name}}\" created successfully",
     "folderRenamed": "Folder renamed to \"{{name}}\"",
     "folderDeleted": "Folder \"{{name}}\" deleted",
